--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,39 +8,41 @@ body {
     background-color: #d9dcd6;
 }
 
+/* header css properties  */
+
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    h1 {
+        display: inline-block;
+        font-size: 48px;
+    }
+
+    h1 .seo {
+        color: #d9dcd6;
+    }
+
+    nav {
+        padding-top: 15px;
+        margin-right: 20px;
+        float: right;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 20px;
+        
+        ul {
+            list-style-type: none;
+        
+            li {
+                display: inline-block;
+                margin-left: 25px;
+            } 
+        }
+    }
+   
 }
 
-.header h1 {
-    display: inline-block;
-    font-size: 48px;
-}
-
-/* added the color to seo class inside the header class.  */
-.header h1 .seo {
-    color: #d9dcd6;
-}
-
-.header nav {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-
-.header nav ul {
-    list-style-type: none;
-}
-
-.header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
-}
 
 a {
     color: #ffffff;
