--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,15 @@ body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
 /* header css properties  */
 
 .header {
@@ -43,14 +52,28 @@ body {
    
 }
 
-
-a {
-    color: #ffffff;
-    text-decoration: none;
+/* First section css's properties  */
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
 }
+.content-article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
 
-p {
-    font-size: 16px;
+    img {
+        max-height: 200px;
+    }
+
+    h2 {
+        margin-bottom: 20px;
+        font-size: 36px;
+    }
 }
 
 .hero {
@@ -72,12 +95,8 @@ p {
     margin-left: 25px;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
 
+/* Second section CSS's properties  */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -90,75 +109,22 @@ p {
     padding-bottom: 32px;
 }
 
-.benefit{
+.benefit-article{
     margin-bottom: 27px;
     color: #ffffff;
-}
-.benefit h3 {
-    margin-bottom: 10px;
-    text-align: center;
+    h3 {
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    img {
+        display: block;
+        margin: 10px auto;
+        max-width: 150px;
+    }
 }
 
-.benefit img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* footer CSS's properties */
 .footer {
     padding: 30px;
     clear: both;
