Refactered the footer, added Meta Viewoport and the device width,initial scale

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,8 +130,10 @@ p {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+
+    h2 {
+        font-size: 20px;
+    }
 }
 
-.footer h2 {
-    font-size: 20px;
-}
+
