Updated the benefit section's css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,8 +109,8 @@ p {
     padding-bottom: 32px;
 }
 
-.benefit-article{
-    margin-bottom: 27px;
+.benefit-art{
+    margin-bottom: 46px;
     color: #ffffff;
     h3 {
         margin-bottom: 10px;
