Update content class margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-.content-article {
+.content-art {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
